@@ -24,7 +24,6 @@ import lotus.domino.NotesException;
 
 import org.openntf.domino.Session;
 import org.openntf.domino.WrapperFactory;
-import org.openntf.domino.exceptions.UnimplementedException;
 import org.openntf.domino.utils.DominoUtils;
 import org.openntf.domino.utils.Factory;
 
@@ -43,7 +42,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 		calendar.set(null);
 	}
 
-	/** The cal_. */
+	/** The calendar */
 	private static ThreadLocal<Calendar> calendar = new ThreadLocal<Calendar>() {
 		@Override
 		public Calendar get() {
@@ -67,6 +66,48 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 
 	/** The notes zone_. */
 	private int notesZone_;
+
+	private static final ThreadLocal<lotus.domino.DateTime> lotusWorker = new ThreadLocal<lotus.domino.DateTime>() {
+		@Override
+		protected lotus.domino.DateTime initialValue() {
+			return (generateWorker());
+		}
+	};
+
+	private static lotus.domino.DateTime generateWorker() {
+		lotus.domino.DateTime ret;
+		try {
+			lotus.domino.Session rawsession = toLotus(Factory.getSession());
+			ret = rawsession.createDateTime(new Date());
+		} catch (Exception e) {
+			ret = null;
+		}
+		return ret;
+	};
+
+	private lotus.domino.DateTime getWorker() throws NotesException {
+		lotus.domino.DateTime ret = lotusWorker.get();
+		if (Base.isDead(ret)) {
+			lotusWorker.set(generateWorker());
+			ret = lotusWorker.get();
+		}
+		initWorker(ret);
+		return ret;
+	}
+
+	private void initWorker(final lotus.domino.DateTime worker) throws NotesException {
+		worker.setLocalTime(date_);
+		worker.convertToZone(notesZone_, dst_);
+		if (isTimeOnly_)
+			worker.setAnyDate();
+		if (isDateOnly_)
+			worker.setAnyTime();
+	}
+
+	private void workDone(final lotus.domino.DateTime worker, final boolean reInit) {
+		if (reInit)
+			this.initialize(worker);
+	}
 
 	//	/**
 	//	 * Instantiates a new date time.
@@ -160,6 +201,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 		try {
 			lotus.domino.Session rawsession = toLotus(Factory.getSession(getParent()));
 			lotus.domino.DateTime delegate = rawsession.createDateTime(date_);
+			delegate.convertToZone(notesZone_, dst_);
 			if (isAnyTime()) {
 				delegate.setAnyTime();
 			}
@@ -181,7 +223,6 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 */
 	private void initialize(final java.util.Date date) {
 		date_ = new Date(date.getTime());	//NTF copy to keep immutable
-		//		cal_.setTime(date);
 		dst_ = false;
 		notesZone_ = 0;
 	}
@@ -196,26 +237,23 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 		try {
 			dst_ = delegate.isDST();
 			notesZone_ = delegate.getTimeZone();
-			String dateonly = delegate.getDateOnly();
-			if (dateonly == null || dateonly.length() == 0)
-				isTimeOnly_ = true;
-			String timeonly = delegate.getTimeOnly();
-			if (timeonly == null || timeonly.length() == 0)
-				isDateOnly_ = true;
+			String s = delegate.getDateOnly();
+			isTimeOnly_ = (s == null || s.length() == 0);
+			s = delegate.getTimeOnly();
+			isDateOnly_ = (s == null || s.length() == 0);
 			try {
 				if (isTimeOnly_ && isDateOnly_) {
 					date_ = null;
 				} else {
 					date_ = delegate.toJavaDate();
 				}
-				//				cal_.setTime(date);
 			} catch (NotesException e1) {
 				// System.out.println("Error attempting to initialize a DateTime: " + delegate.getGMTTime());
 				throw new RuntimeException(e1);
 			}
 
-		} catch (NotesException e) {
-			throw new RuntimeException(e);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
 		}
 	}
 
@@ -225,11 +263,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustDay(int, boolean)
 	 */
 	public void adjustDay(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.DAY_OF_MONTH, n); // TODO NTF - figure out what preserveLocalTime *REALLY* does
-		date_ = cal.getTime();
-		// getDelegate().adjustDay(n, preserveLocalTime);
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustDay(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -247,10 +287,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustHour(int, boolean)
 	 */
 	public void adjustHour(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.HOUR_OF_DAY, n); // TODO flag
-		date_ = cal.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustHour(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -268,10 +311,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustMinute(int, boolean)
 	 */
 	public void adjustMinute(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.MINUTE, n); // TODO flag
-		date_ = cal.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustMinute(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -289,10 +335,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustMonth(int, boolean)
 	 */
 	public void adjustMonth(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.MONTH, n); // TODO flag
-		date_.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustMonth(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -310,10 +359,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustSecond(int, boolean)
 	 */
 	public void adjustSecond(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.SECOND, n); // TODO flag
-		date_.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustSecond(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -331,10 +383,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#adjustYear(int, boolean)
 	 */
 	public void adjustYear(final int n, final boolean preserveLocalTime) {
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.add(Calendar.YEAR, n); // TODO flag
-		date_.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.adjustYear(n, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -352,8 +407,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#convertToZone(int, boolean)
 	 */
 	public void convertToZone(final int zone, final boolean isDST) {
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.convertToZone(zone, isDST);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 		// TODO NTF - find out what this actually does. The documentation is... vague
-		throw new UnimplementedException("convertToZone is not yet implemented.");
+		//throw new UnimplementedException("convertToZone is not yet implemented.");
 	}
 
 	/*
@@ -416,7 +478,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#getDateOnly()
 	 */
 	public String getDateOnly() {
-		return getAncestor().getFormatter().getDateOnly(date_);
+		String ret = null;
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.getDateOnly();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
+		return ret;
 	}
 
 	/*
@@ -425,7 +495,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#getGMTTime()
 	 */
 	public String getGMTTime() {
-		return getAncestor().getFormatter().getDateTime(date_);
+		String ret = null;
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.getGMTTime();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
+		return ret;
 	}
 
 	/*
@@ -434,8 +512,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#getLocalTime()
 	 */
 	public String getLocalTime() {
-		// TODO rationalize timezone stuff
-		return getAncestor().getFormatter().getDateTime(date_);
+		String ret = null;
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.getLocalTime();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
+		return ret;
 	}
 
 	/*
@@ -454,7 +539,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#getTimeOnly()
 	 */
 	public String getTimeOnly() {
-		return getAncestor().getFormatter().getTimeOnly(date_);
+		String ret = null;
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.getTimeOnly();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
+		return ret;
 	}
 
 	/*
@@ -473,7 +566,16 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 */
 	public String getZoneTime() {
 		// TODO NTF - find out what this really does
-		throw new UnimplementedException("getZoneTime is not yet implemented.");
+		String ret = null;
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.getZoneTime();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
+		return ret;
+		// throw new UnimplementedException("getZoneTime is not yet implemented.");
 	}
 
 	/*
@@ -528,13 +630,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalDate(int, int, int, boolean)
 	 */
 	public void setLocalDate(final int year, final int month, final int day, final boolean preserveLocalTime) {
-		// TODO NTF - deal with timezone and dst nonsense :-/
-		Calendar cal = calendar.get();
-		cal.setTime(date_);
-		cal.set(Calendar.YEAR, year);
-		cal.set(Calendar.MONTH, month);
-		cal.set(Calendar.DAY_OF_MONTH, day);
-		date_ = cal.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.setLocalDate(year, month, day, preserveLocalTime);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -543,11 +645,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalDate(int, int, int)
 	 */
 	public void setLocalDate(final int year, final int month, final int day) {
-		Calendar cal = calendar.get();
-		cal.set(Calendar.YEAR, year);
-		cal.set(Calendar.MONTH, month);
-		cal.set(Calendar.DAY_OF_MONTH, day);
-		date_ = cal.getTime();
+		setLocalDate(year, month, day, false);
 	}
 
 	/*
@@ -556,7 +654,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalTime(java.util.Calendar)
 	 */
 	public void setLocalTime(final java.util.Calendar calendar) {
-		date_ = calendar.getTime();
+		setLocalTime(calendar.getTime());
 	}
 
 	/*
@@ -566,7 +664,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 */
 	@Override
 	public void setLocalTime(final Calendar calendar) {
-		date_ = calendar.getTime();
+		setLocalTime(calendar.getTime());
 	}
 
 	/*
@@ -575,7 +673,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalTime(java.util.Date)
 	 */
 	public void setLocalTime(final Date date) {
-		date_ = new Date(date.getTime());
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.setLocalTime(date);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -584,13 +688,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalTime(int, int, int, int)
 	 */
 	public void setLocalTime(final int hour, final int minute, final int second, final int hundredth) {
-		// TODO NTF - figure out exactly what this means vis a vis timezones
-		Calendar cal = calendar.get();
-		cal.set(Calendar.HOUR_OF_DAY, hour);
-		cal.set(Calendar.MINUTE, minute);
-		cal.set(Calendar.SECOND, second);
-		cal.set(Calendar.MILLISECOND, hundredth * 10);
-		date_ = cal.getTime();
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.setLocalTime(hour, minute, second, hundredth);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -599,7 +703,13 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setLocalTime(java.lang.String)
 	 */
 	public void setLocalTime(final String time) {
-		date_ = getAncestor().getFormatter().parseDateFromString(time);
+		try {
+			lotus.domino.DateTime worker = getWorker();
+			worker.setLocalTime(time);
+			workDone(worker, true);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		}
 	}
 
 	/*
@@ -608,7 +718,7 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#setNow()
 	 */
 	public void setNow() {
-		date_ = new Date();
+		setLocalTime(new Date());
 	}
 
 	/*
@@ -617,23 +727,10 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#timeDifference(lotus.domino.DateTime)
 	 */
 	public int timeDifference(final lotus.domino.DateTime dt) {
-		int result = 0;
-		if (dt instanceof org.openntf.domino.impl.DateTime) {
-			DateTime otherDT = (org.openntf.domino.impl.DateTime) dt; // so we can access private members directly.
-			long left = date_.getTime() / 1000; // math is in seconds
-			long right = otherDT.toJavaDate().getTime() / 1000; // math is also in seconds
-			result = Long.valueOf(left - right).intValue();
-		} else {
-			long left = date_.getTime() / 1000; // math is in seconds
-			long right = 0;
-			try {
-				right = dt.toJavaDate().getTime() / 1000; // math is also in seconds
-			} catch (NotesException ne) {
-				DominoUtils.handleException(ne);
-			}
-			result = Long.valueOf(left - right).intValue();
-		}
-		return result;
+		Integer[] res = new Integer[1];
+		res[0] = new Integer(0);
+		timeDifferenceCommon(dt, res);
+		return (res[0]);
 	}
 
 	/*
@@ -642,9 +739,33 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 * @see org.openntf.domino.DateTime#timeDifferenceDouble(lotus.domino.DateTime)
 	 */
 	public double timeDifferenceDouble(final lotus.domino.DateTime dt) {
-		// TODO NTF - this probably returns a higher-precision number in the legacy API
-		int i = this.timeDifference(dt);
-		return Double.valueOf(i).doubleValue();
+		Double[] res = new Double[1];
+		res[0] = new Double(0);
+		timeDifferenceCommon(dt, res);
+		return (res[0]);
+	}
+
+	private void timeDifferenceCommon(final lotus.domino.DateTime dt, final Object[] res) {
+		lotus.domino.DateTime dtLocal = dt;
+		lotus.domino.DateTime lotusDTTmp = null;
+		try {
+			if (dtLocal instanceof org.openntf.domino.impl.DateTime) {
+				lotusDTTmp = ((org.openntf.domino.impl.DateTime) dtLocal).getDelegate();
+				dtLocal = lotusDTTmp;
+			}
+			lotus.domino.DateTime worker = getWorker();
+			if (res[0] instanceof Integer) {
+				res[0] = worker.timeDifference(dtLocal);
+			} else if (res[0] instanceof Double) {
+				res[0] = worker.timeDifferenceDouble(dtLocal);
+			}
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
+		} finally {
+			if (lotusDTTmp != null)
+				s_recycle(lotusDTTmp);
+		}
 	}
 
 	/*
@@ -663,15 +784,15 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 	 */
 	@Override
 	public String toString() {
-		// return cal_.getTime().toString();
-		// Just re-instantiate the delegate for now to ensure compatibility
-		// TODO Switch to a date formatter that properly mimics the original
-		lotus.domino.DateTime delegate = this.getDelegate();
+		String ret = null;
 		try {
-			return delegate.toString();
-		} finally {
-			s_recycle(delegate);
+			lotus.domino.DateTime worker = getWorker();
+			ret = worker.toString();
+			workDone(worker, false);
+		} catch (NotesException ne) {
+			DominoUtils.handleException(ne);
 		}
+		return ret;
 	}
 
 	/*
@@ -740,6 +861,14 @@ public class DateTime extends Base<org.openntf.domino.DateTime, lotus.domino.Dat
 		out.writeBoolean(isTimeOnly_);
 		out.writeInt(notesZone_);
 		out.writeLong(date_.getTime());
+	}
+
+	/*
+	 * Deprecated, but needed for Externalization
+	 */
+	@Deprecated
+	public DateTime() {
+		super(null, Factory.getSession(), null, 0, NOTES_TIME);
 	}
 
 }
